# mochi-ch-placement

./: .gitignore  COPYRIGHT  INSTALL  Makefile.am  README.md  configure.ac  prepare
include/: ch-placement-crush.h  ch-placement-oid-gen.h  ch-placement.h
m4/: README
maint/: ch-placement.pc.in
patches/: ceph-0.94.3-crush-vring.patch
src/: Makefile.subdir  ch-placement-benchmark.c  ch-placement-decluster-check.c  ch-placement-lookup.c  ch-placement-stripe.c  ch-placement.c  comb.h  lookup3.c  oid-gen.c  oid-gen.h  spooky.cpp  spooky.h
src/modules/: Makefile.subdir  placement-crush.c  placement-hash-lookup3.c  placement-hash-spooky.c  placement-mod.h  placement-multiring.c  placement-ring.c  placement-static-modulo.c  placement-two-d.c  placement-xor.c  placement-xor.h
tests/: Makefile.subdir  ch-placement-test.c  test-hash-lookup3.sh  test-hash-spooky.sh  test-multiring.sh  test-ring.sh  test-two-d.sh  test-xor.sh
